--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "@mdi/js": "^5.0.45",
     "core-js": "^3.6.4",
-    "firebase": "^7.13.1",
+    "firebase": "^7.14.0",
     "vee-validate": "^3.2.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vuefire": "^2.2.2",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
   },
