--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,26 @@
-image:node:alpine
+image: node:8.11
 cache:
-  - node_modules/
-deploy_production:
-stage: deploy
-envirnoment: Production
-only: 
-- master
-script:
-- npm install
-- npm i -g firebase-tools
-- npm run build
-- firebase deploy - - non - interactive - - token
-"1//0hQkff4ceXurJCgYIARAAGBESNwF-L9IrDdm2SeDZKz8F4dVFVP3GGMHQmnaGtmv-JIG4Xx8W8dPXYyIE_mueoCAZpHa-SFFAoyM"
+  paths:
+    - node_modules/
+    #- app/bower_components
+deploy_develop:
+  stage: deploy
+  environment: develop
+  only:
+    - develop
+  script:
+    - npm install -g firebase-tools
+    #- npm install -g bower
+    - npm install
+    - cd functions
+    - npm install 
+    - cd ..
+    - npm run build
+    #- bower install --allow-root
+    - firebase use --token "1//0hQkff4ceXurJCgYIARAAGBESNwF-L9IrDdm2SeDZKz8F4dVFVP3GGMHQmnaGtmv-JIG4Xx8W8dPXYyIE_mueoCAZpHa-SFFAoyM" default
+    - firebase deploy -m "Pipeline $CI_PIPELINE_ID, build $CI_BUILD_ID" --non-interactive --token $FIREBASE_TOKEN
+
+
+
+
+
