--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
-lenguage: "node_js"
+lenguage: node_js
 node_js:
-    - "4.0"
+    - "6.13.6"
+branches:
+  only: 
+  - master    
+before_script:
+  - npm install -g firebase-tools
 script:
-    
-    - echo "Deploying"
-
-install:
-    - npm install -g firebase-tools   
+  - npm run bluid
+  - npm run test
+       
 after_success:
-    - firebase deploy --token "$FIREBASE_TOKEN"    
-    
+    - firebase deploy --token $FIREBASE_TOKEN
+
+
+      
     
