--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - npm install -g firebase-tools
 
 script:
-  - npm run bluid
+  - npm run build
   - npm run test
        
 after_success:
