Actulizacion de archivo

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
   - npm run test
        
 after_success:
-    - firebase deploy --token \$FIREBASE_TOKEN
+    - firebase deploy --token $FIREBASE_TOKEN
 
 
       
