--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ node_js:
   - "7"
 script:
  - echo "Deploy!!"
+ - npm run build
 install:
   - npm install -g firebase-tools
+  
 after_success:
  - firebase deploy --project sitema-inventario --token $FIREBASE_TOKEN
 
