--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
-language: node_js
+lenguage: node_js
 node_js:
-  - "7"
-script:
- - echo "Deploy!!"
- - npm run build
-install:
+    - "9.3.0"
+branches:
+  only: 
+  - master    
+before_script:
   - npm install -g firebase-tools
-  
+
+script:
+  - npm run build
+  - npm run test
 after_success:
- - firebase deploy --project sitema-inventario --token $FIREBASE_TOKEN
+ - firebase deploy --sitema-inventario --token $FIREBASE_TOKEN
 
 
       
