--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,20 @@ node_js:
 branches:
   only: 
   - master    
+
+  
 before_script:
   - npm install -g firebase-tools
 
 script:
-  - npm run build
   - npm run test
-after_success:
- - firebase deploy --sitema-inventario --token $FIREBASE_TOKEN
+  - npm install
+  - npm run build
+deploy:
+  skip_cleanup: true
+  provider: firebase
+  token: $FIREBASE_TOKEN
+
 
 
       
