--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,10 @@ script:
   - npm install
   - npm run build
 deploy:
-  skip_cleanup: true
   provider: firebase
-  token: 
-    --token $FIREBASE_TOKEN 
-
-
+  token:
+    secure: $FIREBASE_TOKEN
+    project: "sitema-inventario"
 
       
     
