--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js: 8
 
 before_script:
   - npm install firebase-tools -g
-  - cd functions && npm install
+  - npm install
 
 script:
   - firebase deploy --only hosting,functions --token  "1//0hLLHrwsOKpDGCgYIARAAGBESNwF-L9IrHHH58sz6y9Cdf8iiQD-ehWQHTjc2DoW5s52c1RjNK4yBXGfFr6vhzaFb1zZNwFrZt7s"
