--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 
  language: node_js
-node_js: 8
-
-before_script:
-  - npm install firebase-tools -g
-  - npm install
-
-script:
-  - firebase deploy --only hosting,functions --token  "1//0hLLHrwsOKpDGCgYIARAAGBESNwF-L9IrHHH58sz6y9Cdf8iiQD-ehWQHTjc2DoW5s52c1RjNK4yBXGfFr6vhzaFb1zZNwFrZt7s"
+node_js: 
+  - "node"
+  script:
+    -
+deploy:
+  provider: firebase
+  token:
+    secure: "1//0hLLHrwsOKpDGCgYIARAAGBESNwF-L9IrHHH58sz6y9Cdf8iiQD-ehWQHTjc2DoW5s52c1RjNK4yBXGfFr6vhzaFb1zZNwFrZt7s"
   
 
       
