--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ before_script:
   - npm install -g firebase-tools
 
 script:
-  - npm run build
-  - npm run test
+   npm run build
+  
   
        
 after_success:
