--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,10 @@
 lenguage: node_js
 node_js:
     - "9.3.0"
-branches:
-  only: 
-  - master    
-before_script:
+    
+install:
   - npm install -g firebase-tools
-
 script:
-   npm run build
-  
-  
-       
+  - echo "DEPLOING"
 after_success:
     - firebase deploy --token $FIREBASE_TOKEN
