--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,16 @@
 {
   "hosting": {
-    
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "":[
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
- 
   }
 }
