--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 install:
   - npm install -g firebase-tools
 script:
-  _ npm run build
+  - npm run build
   - echo "DEPLOING"
 after_success:
     - firebase deploy --token $FIREBASE_TOKEN
